--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -23,12 +23,12 @@ spec:
         - name: Site
           value: "https://github.com/happyevero/Html/raw/main/S-html.zip"
         - name: Vless_UUID
-          value: "40f75dd5-1a08-4d85-8e5b-420a5e7d3bc6"
+          value: "6ab0d44a-7260-4569-b984-25703d4fa885"
         - name: Vless_Path
-          value: "/jkduij897"
+          value: "/kdiwdll"
         - name: Vmess_UUID
-          value: "0fded502-9ab5-4cc6-8c9d-982bb33a08b7"
+          value: "160293f6-33bd-4f75-8d10-22e8c2603245"
         - name: Vmess_Path
-          value: "/uiytre345"
+          value: "/wmdisou"
         - name: Share_Path
           value: "/v2link"
